updated script & styles

--- a/script.html
+++ b/script.html
@@ -15,10 +15,10 @@
     <span class="date">11/14/16</span>
     <span class="tags">Trump's Cabinet</span>
     <div class="text">
-      <h3>Concerning Steve Bannon's Appointment</h3>
-      <p>Hi! My name is <span class="fillin">your name</span> and I’m a constituent of <span class="fillin">your representative's name</span>. I’m calling about <span class="fillin">representative's</span> stance on Trump’s newest appointee, Steve Bannon. Am I speaking to the correct person?</p>
-      <p>Like I said, I’m contacting <span class="fillin">representative</span> to express my concern over the President-Elect’s appointment of Steve Bannon. As a Chief Strategist to the White House, Mr. Bannon would exert a considerable amount of influence over Mr. Trump’s everyday decisions. This is severely inappropriate, since Mr. Bannon has proven himself time and time again to have extreme White Nationalist views. In fact, the Southern Poverty Law Center recently denounced him as having no business in the White House.</p>
-      <p>I’m told that Senator Harry Reid <span class="fillin">has addressed / will address</span> the floor about this issue on Nov. 15. I strongly urge <span class="fillin">representative</span> to join him in denouncing this dangerous and unfit man. A White Nationalist who publishes headlines like “Renegade Jew” and “Birth Control Makes Women Unattractive and Crazy” on his news website has no place advising the President. I’m sure you agree.</p>
+      <h1>Concerning Steve Bannon's Appointment</h1>
+      <p>Hi! My name is <span class="fillin">your name</span> and I'm a constituent of <span class="fillin">your representative's name</span>. I'm calling about <span class="fillin">representative's</span> stance on President-Elect Trump's newest appointee, Steve Bannon. Am I speaking to the correct person?</p>
+      <p>Like I said, I'm contacting <span class="fillin">representative</span> to express my concern over the President-Elect's appointment of Steve Bannon. As a Chief Strategist to the White House, Mr. Bannon would exert a considerable amount of influence over Mr. Trump's everyday decisions. This is severely inappropriate, since Mr. Bannon has proven himself time and time again to have extreme White Nationalist views. In fact, the Southern Poverty Law Center recently denounced him as having no business in the White House.</p>
+      <p>I'm told that Senator Harry Reid <span class="fillin">has addressed / will address</span> the floor about this issue on Nov. 15. I strongly urge <span class="fillin">representative</span> to join him in denouncing this dangerous and unfit man. A White Nationalist who publishes headlines like "Renegade Jew" and "Birth Control Makes Women Unattractive and Crazy" on his news website has no place advising the President. I'm sure you agree.</p>
       <p>Thank you for your time!</p>
     </div>
     <div class="sources">
