--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="clearfix">
     <img class="logo" src="logo.png">
   </header>
-  <div class="container">
+  <div class="container subpage">
     <div class="left">
       <h1 class="lead">Let <br/>your voice <br/>be heard.</h1>
     </div>
