--- a/script.html
+++ b/script.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <title>About Call Congress</title>
+  <title>Call Congress | Bannon Appointment</title>
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 
   <script src="https://use.typekit.net/uno4wba.js"></script>
